Updated Task Edit, Task table, Added custom labels

--- a/force-app/main/default/aura/TaskEdit/TaskEdit.cmp
+++ b/force-app/main/default/aura/TaskEdit/TaskEdit.cmp
@@ -14,7 +14,10 @@
     <aura:attribute name="taskTypeList" type="String[]" default="Not Selected,Visit,Medication"/>
     <aura:attribute name="setReminderValueList" type="String[]" default="Email,Disabled"/>
     <aura:attribute name="reminderFrequencyList" type="String[]" default="Complete By Date,1 day before"/>
-    <aura:attribute name="emailTurnedOn" type="Boolean"/>
+    <aura:attribute name="emailParticipantTurnedOn" type="Boolean"/>
+    <aura:attribute name="emailDelegateTurnedOn" type="Boolean"/>
+    <aura:attribute name="isDelegate" type="Boolean"/>
+    <aura:attribute name="hasDelegates" type="Boolean"/>
 
     <!-- handlers: -->
     <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
@@ -119,20 +122,19 @@
                 {!$Label.c.Task_Details}
             </div>
             <!--Task Name-->
-            <div class="slds-grid slds-gutters slds-wrap">
+            <div class="slds-grid te-form slds-gutters slds-wrap">
                 <div class="slds-col slds-size_1-of-1">
                     <lightning:input name="taskName" label="{!$Label.c.Task_Name}" value="{!v.task.Subject}" required="true"
                                  disabled="{!v.otherTask || v.taskStatusCompleted}"/>
                 </div>
             </div>
 
-            <div class="slds-grid slds-gutters slds-wrap slds-p-top_small">
+            <div class="slds-grid slds-gutters slds-wrap">
                 <!--Due Date-->
                 <div class="slds-col slds-size_1-of-1 slds-medium-size_1-of-2">
                     <lightning:input aura:id="dueDateInputId" type="date" min="{!v.todayDate}" label="{!$Label.c.Due_Date}" value="{!v.task.ActivityDate}"
                                      disabled="{!v.otherTask || v.taskStatusCompleted}" onchange="{!c.onChangeDueDate}"/>
                 </div>
-                <div></div>
                 <div class="slds-col slds-size_1-of-1 slds-medium-size_1-of-2">
                     <!--Task Type here-->
                     <lightning:select name="taskTypeSelect" label="{!$Label.c.Task_Type}" required="true" value="{!v.task.Task_Type}">
@@ -145,7 +147,7 @@
 
             <!--Created Date Time-->
             <aura:if isTrue="{!v.editMode}">
-                <div class="slds-grid slds-gutters slds-wrap slds-p-top_small">
+                <div class="slds-grid te-form slds-gutters slds-wrap">
                     <div class="slds-col slds-size_1-of-1">
                         <lightning:input  label="{!$Label.c.Created_Date}" value="{!v.task.CreatedDate}" disabled="true" type="date"/>
                     </div>
@@ -153,36 +155,56 @@
             </aura:if>
 
 
-            <div class="te-col-header slds-p-top_small" style="margin-top: 15px;">
+            <div class="te-col-header" style="margin-top: 15px;">
                 {!$Label.c.Task_Reminder_Details}
             </div>
 
-            <div class="slds-grid slds-gutters slds-wrap">
+            <div class="slds-grid te-form slds-gutters slds-wrap">
                 <!--Set Reminder-->
                 <div class="slds-col slds-size_1-of-1 slds-medium-size_1-of-2">
-                    <aura:if isTrue="{!v.emailTurnedOn}">
+                    <aura:if isTrue="{!v.emailParticipantTurnedOn || (v.emailDelegateTurnedOn &amp;&amp; v.hasDelegates)}">
                         <lightning:select aura:id="reminderOptionsId" name="setReminderSelect" label="{!$Label.c.Set_Reminder}" required="true" onchange="{!c.onChangeSetReminder}">
                             <aura:iteration items="{!v.setReminderValueList}" var="rem">
                                 <option text="{!rem}"></option>
                             </aura:iteration>
                         </lightning:select>
                     </aura:if>
-                    <aura:if isTrue="{!!v.emailTurnedOn}">
+                    <aura:if isTrue="{!!v.emailParticipantTurnedOn || !v.emailDelegateTurnedOn}">
                         <lightning:select name="setReminderSelect" label="{!$Label.c.Set_Reminder}" required="true" disabled="true">
                             <option text="Disabled"></option>
                         </lightning:select>
                     </aura:if>
                 </div>
                 <div class="slds-col slds-size_1-of-1 slds-medium-size_1-of-2">
-                    <aura:if isTrue="{!!v.emailTurnedOn}">
-                        <br/>
-                        <lightning:icon iconName="utility:warning" alternativeText="Warning!" variant="warning"/>
-                        <aura:unescapedHtml value="{!$Label.c.EmailPreferencesIsOff}"/>
-                    </aura:if>
+                        <div class="icon-alert">
+                            <div class="icon">
+                                <aura:if isTrue="{!!v.emailParticipantTurnedOn || !v.emailDelegateTurnedOn}">
+                                    <lightning:icon iconName="utility:warning" alternativeText="Warning!" variant="warning"/>
+                                </aura:if>
+                            </div>
+                            <div class="text">
+                                <aura:if isTrue="{!!v.isDelegate}">
+                                    <aura:if isTrue="{!!v.emailParticipantTurnedOn &amp;&amp; v.emailDelegateTurnedOn}">
+                                        <aura:unescapedHtml value="{!$Label.c.EmailPreferencesIsOff}"/>
+                                    </aura:if>
+                                </aura:if>
+                                <aura:if isTrue="{!v.isDelegate}">
+                                    <aura:if isTrue="{!!v.emailParticipantTurnedOn &amp;&amp; v.emailDelegateTurnedOn}">
+                                        {!$Label.c.Task_Reminders_Missing}
+                                    </aura:if>
+                                </aura:if>
+                                <aura:if isTrue="{!v.emailParticipantTurnedOn &amp;&amp; !v.emailDelegateTurnedOn}">
+                                    {!$Label.c.Task_Reminders_Missing}
+                                </aura:if>
+                                <aura:if isTrue="{!!v.emailParticipantTurnedOn &amp;&amp; !v.emailDelegateTurnedOn}">
+                                    <aura:unescapedHtml value="{!$Label.c.EmailPreferencesIsOff}"/>
+                                </aura:if>
+                            </div>
+                        </div>
                 </div>
             </div>
 
-            <div class="slds-grid slds-gutters slds-wrap slds-p-top_small">
+            <div class="slds-grid te-form slds-gutters slds-wrap">
                 <!--Reminder Frequency-->
                 <div class="slds-col slds-size_1-of-1 slds-medium-size_1-of-2">
                     <lightning:select aura:id="reminderFreqId" name="reminderFrequencySelect" label="{!$Label.c.Reminder_Frequency}" required="true"
