--- a/force-app/main/default/aura/ResourcesDetailItem/ResourcesDetailItem.css
+++ b/force-app/main/default/aura/ResourcesDetailItem/ResourcesDetailItem.css
@@ -64,6 +64,15 @@
     line-height: 14px;
     margin: 0 0 3px 0;
 }
+
+.THIS .resource-content-updated {
+    font-size: 14px;
+    color: #333333;
+    font-family: "Proxima Nova";
+    line-height: 16px;
+    margin-top: 5%;
+}
+
 .THIS .resource-body {
     color: #333333;
     font-family: "Proxima Nova";
