My Studies Mobile Layout with text ellipsys for studies names. Delegate issue fix.

--- a/force-app/main/default/aura/SitesSearchItem/SitesSearchItem.cmp
+++ b/force-app/main/default/aura/SitesSearchItem/SitesSearchItem.cmp
@@ -30,7 +30,7 @@
                 </div>
                 <aura:if isTrue="{!v.studySiteWrapper.siteType!='Virtual'}">
                     <div class="ssi-site-distance">
-                            {!v.studySiteWrapper.formatedDistance}
+                            <aura:unescapedHtml value="{!v.studySiteWrapper.formatedDistance}"/>
                     </div>
                 </aura:if>
             </div>
