--- a/force-app/main/default/aura/StudyListViewItem/StudyListViewItem.css
+++ b/force-app/main/default/aura/StudyListViewItem/StudyListViewItem.css
@@ -12,7 +12,14 @@
     padding-right: 17px;
 }
 
-/*.THIS .slvi-name-section,*/
+.THIS .slvi-top-container-hcp {
+    padding-left: 17px;
+    padding-right: 17px;
+}
+
+
+
+.THIS .slvi-name-section,
 .THIS .slvi-objective-section {
     display: flex;
     justify-content: space-between;
@@ -20,14 +27,14 @@
 }
 
 .THIS .study-name {
-    text-overflow: ellipsis;
-    white-space: nowrap;
+    /*text-overflow: ellipsis;*/
+    /*white-space: nowrap;*/
     overflow: hidden;
 }
 
 .THIS .study-name a {
     text-decoration: none;
-    height: 30px;
+    /*height: 30px;*/
     color: #297DFD;
     font-size: 24px;
     font-weight: 500;
@@ -265,8 +272,31 @@
     .THIS .slvi-header-item + .slvi-header-item {
         margin-top: 16px;
     }
+    .THIS .site-distance {
+        margin-top: .5rem;
+    }
+    .THIS .rri-icon svg{
+        height: 16px;
+        width: 13px;
+    }
+    .THIS .rri-icon span{
+        margin: .125rem!important;
+    }
 }
+@media all and (min-width: 768px) {
+    .THIS .site-distance {
+        text-align: right;
+    }
+    .THIS .slvi-top-container-hcp {
+        height: 100px;
+    }
+}
+
 .THIS .slvi-search-site-btn {
     width: 100%;
 }
+.THIS .slvi-site-btn{
+    width: 100%;
+}
+
 
