--- a/force-app/main/default/aura/SitesSearch/SitesSearch.css
+++ b/force-app/main/default/aura/SitesSearch/SitesSearch.css
@@ -7,14 +7,14 @@
 
 .THIS .study-name{
     margin-top: 30px;
-    text-overflow: ellipsis;
-    white-space: nowrap;
+    /*text-overflow: ellipsis;*/
+    /*white-space: nowrap;*/
     overflow: hidden;
 }
 
 .THIS .study-name a {
     text-decoration: none;
-    height: 30px;
+    /*height: 30px;*/
     color: #297DFD;
     font-size: 24px;
     font-weight: 500;
@@ -27,7 +27,10 @@
     min-height: 500px;
 }
 @media all and (min-width: 768px){
-    .THIS lightning-map.slds-grid{
+    .THIS .ss-map{
+        align-self: stretch;
+    }
+    .THIS lightning-map{
         height: 100%;
     }
 }
