--- a/unpackaged/main/default/layouts/HCP_Enrollment__c-HCP Enrollment Layout.layout-meta.xml
+++ b/unpackaged/main/default/layouts/HCP_Enrollment__c-HCP Enrollment Layout.layout-meta.xml
@@ -96,6 +96,10 @@
                 <behavior>Readonly</behavior>
                 <field>PI_Account__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Readonly</behavior>
+                <field>Override_PI_Status__c</field>
+            </layoutItems>
         </layoutColumns>
         <style>TwoColumnsTopToBottom</style>
     </layoutSections>
@@ -183,13 +187,17 @@
         <fields>CREATED_DATE</fields>
         <relatedList>Material_Sent__c.HCP_Enrollment__c</relatedList>
     </relatedLists>
+    <relatedLists>
+        <fields>NAME</fields>
+        <relatedList>Referring_HCP_Staff__c.HCP_Enrollment__c</relatedList>
+    </relatedLists>
     <showEmailCheckbox>false</showEmailCheckbox>
     <showHighlightsPanel>false</showHighlightsPanel>
     <showInteractionLogPanel>false</showInteractionLogPanel>
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00h1I000002zidx</masterLabel>
+        <masterLabel>00h9E000000lijV</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
