--- a/force-app/main/default/aura/UpcomingVisitsPreviewPanel/UpcomingVisitsPreviewPanel.cmp
+++ b/force-app/main/default/aura/UpcomingVisitsPreviewPanel/UpcomingVisitsPreviewPanel.cmp
@@ -35,7 +35,7 @@
             </c:RRTable>
         </div>
         <div class="sv-footer">
-            <c:RRLink page="" label="See All"/>
+            <c:RRLink page="study-workspace?tab=tab-referred-patient" label="See All"/>
         </div>
     </div>
 
