--- a/force-app/main/default/aura/TasksTab/TasksTab.cmp
+++ b/force-app/main/default/aura/TasksTab/TasksTab.cmp
@@ -6,7 +6,7 @@
 
     <!-- attributes: -->
     <aura:attribute name="taskMode" type="String" default="{!$Label.c.Task_Tab_Open_Tasks}"/>
-    <aura:attribute name="openTasks" type="Task[]"/>
+    <aura:attribute name="openTasks" type="Object[]"/>
     <aura:attribute name="completedTasks" type="Task[]"/>
     <aura:attribute name="initialized" type="Boolean" default="false"/>
 
@@ -17,7 +17,6 @@
     <c:RRSpinner aura:id="spinner" size="medium" fixed="true" showSpinner="true"/>
 
     <aura:if isTrue="{!v.initialized}">
-
         <div>
             <!-- open tasks: -->
             <aura:if isTrue="{!v.taskMode == 'Open'}">
@@ -28,25 +27,28 @@
                     <c:RRTable>
                         <tr>
                             <th>{!$Label.c.Task_Tab_Table_Col_Name}</th>
-                            <th class="priority">{!$Label.c.Task_Tab_Table_Col_Priority}</th>
-                            <th class="completed-by">{!$Label.c.Task_Tab_Table_Col_Completed_By}</th>
-                            <th></th>
+                            <th class="priority">{!$Label.c.Originator}</th>
+                            <th class="completed-by">{!$Label.c.Due_date}</th>
+                            <th class="completed-by">{!$Label.c.Reminder_Date}</th>
                         </tr>
-                        <aura:iteration items="{!v.openTasks}" var="task">
+                        <aura:iteration items="{!v.openTasks}" var="taskWrapper">
                             <tr>
                                 <td>
-                                    <c:RRLink label="{!task.Subject}" page="{!'edit-task?id=' + task.Id}"/>
+                                    <c:RRLink label="{!taskWrapper.openTask.Subject}" page="{!'edit-task?id=' + taskWrapper.openTask.Id}"/>
                                 </td>
                                 <td>
-                                    <aura:if isTrue="{!task.Priority != 'Normal'}">
-                                        {!task.Priority}
+                                    {!taskWrapper.originator}
+                                </td>
+                                <td>
+                                    <ui:outputDate value="{!taskWrapper.openTask.ActivityDate}"/>
+                                </td>
+                                <td>
+                                    <aura:if isTrue="{!taskWrapper.openTask.Completed_Date__c != null}">
+                                        <ui:outputDate value="{!taskWrapper.openTask.Completed_Date__c}"/>
                                     </aura:if>
-                                </td>
-                                <td>
-                                    <ui:outputDate value="{!task.ActivityDate}"/>
-                                </td>
-                                <td class="ignore">
-                                    <button id="{!task.Id}" class="apollo-btn tertiary" onclick="{!c.doIgnoreTask}">{!$Label.c.BTN_Ignore}</button>
+                                    <aura:if isTrue="{!taskWrapper.openTask.Completed_Date__c == null}">
+                                        {!$Label.c.None}
+                                    </aura:if>
                                 </td>
                             </tr>
                         </aura:iteration>
